Added api for storage and tests
