# api/specs/storage/v0/openapi.yaml
@@ -273,23 +273,18 @@ paths:
         default:
           $ref: '#/components/responses/DefaultErrorResponse'
 
-  /folders/{folder_id}:
+  /simcore-s3/folders:
     post:
       tags:
         - users
-      summary: Creates new folder and copies all files from source project
+      summary: Deep copies of all data from source to destination project in s3
       operationId: copy_folders_from_project
       parameters:
-      - name: folder_id
-        in: path
-        required: true
-        schema:
-          type: string
       - name: user_id
         in: query
         required: true
         schema:
-          type: string
+          type: integer
       requestBody:
         content:
           application/json:
@@ -302,34 +297,34 @@ paths:
                   $ref: './openapi.yaml#/components/schemas/Project'
       responses:
         '201':
-          description: Created folderfor destination project
+          description: Data from destination project copied and returns project
           content:
             application/json:
               schema:
                 $ref: './openapi.yaml#/components/schemas/Project'
         default:
           $ref: './openapi.yaml#/components/responses/DefaultErrorResponse'
-    #delete:
-    #  tags:
-    #    - users
-    #  summary: Deletes a folder
-    #  operationId: delete_folder
-    #  parameters:
-    #  - name: folder_id
-    #    in: path
-    #    required: true
-    #    schema:
-    #      type: string
-    #  - name: user_id
-    #    in: query
-    #    required: true
-    #    schema:
-    #      type: string
-    #  responses:
-    #    '204':
-    #      $ref: '#/components/responses/OK_NoContent_204'
-    #    default:
-    #      $ref: '#/components/responses/DefaultErrorResponse'
+
+  /simcore-s3/folders/{folder_id}:
+    delete:
+      tags:
+        - users
+      summary: Deletes all objects with folder_id prefix
+      operationId: delete_folders_of_project
+      parameters:
+      - name: folder_id
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: user_id
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        '204':
+          description: folder has been successfully deleted
 
 components:
   schemas:
